base/src/test/resources/failure/cubical/dim-mismatch.aya.txt
In file $FILE:21:5 ->

  19 | def cmp {A : Type} (x : A)
  20 |   : [| i j |] (Partial (~ j) A) {| i 0 := p1 A x j |}
  21 |   => \i => p2 A x i
            ^------------^

Error: This path lambda expects 2 parameters, but it has only 1

1 error(s), 0 warning(s).
What are you doing?
